[package]
name = "ahm-parse-events"
version = "0.1.0"
edition = "2024"

[dependencies]
subxt = "*"
tokio = { version = "*", features = ["macros", "time", "rt-multi-thread"] }
hex-literal = "*"
subxt-signer = "*"
codec = { version = "*", features = ["derive"], package = "parity-scale-codec" }
scale-encode = "*"
scale-decode = "*"
log = "0.4.27"
env_logger = "0.11.8"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
