[package]
name = "fix-deps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.11.0"
glob = "0.3.1"
pathdiff = "0.2.1"
regex = "1.8.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
toml_edit = "0.19.10"
