[package]
name = "fix-deps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.11.0"
glob = "0.3.1"
pathdiff = "0.2.1"
regex = "1.9.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = "1.0.18"
serde_json = "1.0.106"
tokio = { version = "1", features = ["full"] }
toml_edit = "0.20.0"
